# librarian

./: .gitignore  LICENSE.txt  README.md  app.py  catalog_manager.py  configure_package_build.py  librarian.py  localize.py  pyproject.toml  requirements.txt  search_manager.py  start_mcp_server.py  test_mcp_server.py  utils.py
data/: dewey.json  lcc.json
src/bookshelf_manager/: .gitignore  app.py  catalog_manager.py  cmd_app.py  librarian.py  mcp.py  search_manager.py  sync.py  teacher.py  utils.py
